[package]
name = "HotVectors"
version = "0.1.0"
edition = "2021"

[features]
gpu_processing = []

benchmark = []
sanity = []

# rest = ["axum"]

[dependencies]
rkyv = {version = "0.8.10", features = ["bytecheck", "alloc", "uuid-1"]}
uuid = {version = "1.16.0", features = ["v4", "serde"]}
rancor = "0.1.0"
serde = {version = "1.0.215", features = ["derive"]}
petgraph = "0.8.1"
heapify = "0.2.0"
chrono = "0.4.*"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3.19"

sled = "*"
# async-sqlite = "0.5.0"

futures = "0.3.31"

# placeholder libraries
spade = { version = "2.13.1", features = ["serde"]}
# fast-umap = "*"

# Conditional dependency for REST API
axum = { version = "0.8.1", features = ["macros"]}#, optional = true}

# [patch.crates-io]
# rusqlite = "0.35.0"
# libsqlite3-sys = "0.33.0"